Revert "fix(modal): add class to body to hide overflow"
This reverts commit ddcab6d93c82d10670352d631244bf2ba99f10f4.

--- a/packages/components/src/modal/src/components/osds-modal/osds-modal.scss
+++ b/packages/components/src/modal/src/components/osds-modal/osds-modal.scss
@@ -66,12 +66,6 @@
   display: none;
 }
 
-.osds-modal {
-  &--opened {
-    overflow: hidden;
-  }
-}
-
 // apply the theme template for the component
 @include ods-theme-component {
   @include osds-modal-theme-color;
